@@ -10,6 +10,7 @@
 7. Use QUrl with server details to build HTTP address used to compare MPD http
    file paths against.
 8. Store song ratings in MPD's sticker DB.
+9. If we fail to download a cover, don't keep trying next time song is played.
 
 1.4.1
 -----
